04-security/k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: customers
---
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: items
---
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: orders
---
apiVersion: v1
kind: Service
metadata:
  name: uaa
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: uaa
